add users/me endpoint
