# backend/docs/openapi.yaml
@@ -5,6 +5,20 @@ info:
 servers:
   - url: "/api"
 paths:
+  /v1/users/me:
+    get:
+      tags:
+        - users
+      summary: Read User
+      description: Retrieve user info.
+      operationId: userMe
+      responses:
+        200:
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
   /v1/items:
     get:
       tags:
@@ -141,6 +155,19 @@ paths:
           $ref: "#/components/responses/UnprocessableEntity"
 components:
   schemas:
+    User:
+      required:
+        - id
+        - name
+        - email
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        email:
+          type: string
     NewItem:
       required:
         - title
